# tcpclips64

./: .gitignore  CMakeLists.txt  readme.MD  start.sh  tcpCLIPS64_import.cmake
clips64/: CMakeLists.txt  LICENSE
clipsclient/: .gitignore  CMakeLists.txt
clipsclient/src/: clipsclient.cpp  clipsstatus.cpp  reply.cpp  request.cpp
clipscontrol/: CMakeLists.txt
clipscontrol/src/: hotkey.h  main.cpp  ncfilepickermw.cpp  ncurseswin.cpp  ncurseswin.h
clipsserver/: .gitignore  CMakeLists.txt  cubes.clp
clipsserver/src/: main.cpp  server.cpp  server.h  session.cpp  session.h  tcp_message.cpp  tcp_message.h
clipswrapper/: .gitignore  CMakeLists.txt
clipswrapper/src/: clipsdefenv.h  clipswrapper.cpp  clipswrapperrouter.cpp  clipswrapperudf.cpp  contextimpl.cpp  contextimpl.h  queryrouter.cpp  retval.cpp
include/: .gitignore
include/clipsclient/: clipsclient.h  clipsstatus.h  reply.h  request.h
include/clipswrapper/: clipswrapper.h  clipswrapperrouter.h  queryrouter.h
include/clipswrapper/udf/: context.h  retval.h  type.h  udf.h
tests/: .gitignore  CMakeLists.txt
tests/client/: main.cpp
tests/pytest/: test.py
tests/simple/: main.cpp
